--- a/.github/workflows/squirrel-map.html
+++ b/.github/workflows/squirrel-map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+index<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,7 +20,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -32,7 +32,8 @@
         <table class="nav">
           <tr>
             <td><a href="./renewables-map.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./or root URLs (like http://example.com/) you must provide an index.html file.
+index.html">Home</a></td>
             <td><a href="./climate-emotions.html">Next &#187;</a></td>
           </tr>
         </table>
