--- a/.github/workflows/consumption-multilines.html
+++ b/.github/workflows/consumption-multilines.html
@@ -20,7 +20,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -31,7 +31,7 @@
         <table class="nav">
           <tr>
             <td><a href="./senate-map.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./renewables-map.html">Next &#187;</a></td>
           </tr>
         </table>
