--- a/.github/workflows/fall-color-heatmap.html
+++ b/.github/workflows/fall-color-heatmap.html
@@ -20,7 +20,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -32,7 +32,7 @@
         <table class="nav">
           <tr>
             <td><a href="./climate-emotions.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./happiness-dots.html">Next &#187;</a></td>
           </tr>
         </table>
