--- a/.github/workflows/happiness-dots.html
+++ b/.github/workflows/happiness-dots.html
@@ -24,7 +24,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -36,7 +36,7 @@
         <table class="nav">
           <tr>
             <td><a href="./fall-color-heatmap.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./passports-line.html">Next &#187;</a></td>
           </tr>
         </table>
