--- a/.github/workflows/passports-line.html
+++ b/.github/workflows/passports-line.html
@@ -30,7 +30,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -42,7 +42,7 @@
         <table class="nav">
           <tr>
             <td><a href="./happiness-dots.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./nyc-immigrant-map.html">Next &#187;</a></td>
           </tr>
         </table>
