--- a/.github/workflows/renewables-map.html
+++ b/.github/workflows/renewables-map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+index<!DOCTYPE html>
 <html>
 
 <head>
@@ -74,7 +74,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -86,7 +86,7 @@
         <table class="nav">
           <tr>
             <td><a href="./consumption-multilines.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./squirrel-map.html">Next &#187;</a></td>
           </tr>
         </table>
