--- a/.github/workflows/senate-map.html
+++ b/.github/workflows/senate-map.html
@@ -28,7 +28,7 @@
     <div class="sidebar">
 
       <div class="headshot-container">
-        <a href="./portfolio-home.html" style="border:none;">
+        <a href="./index.html" style="border:none;">
           <img src="headshot-bw.png" alt="headshot" style="width:120px;height:auto;">
         </a>
       </div>
@@ -40,7 +40,7 @@
         <table class="nav">
           <tr>
             <td><a href="./pigeon-map.html">&#171; Back</a></td>
-            <td><a href="./portfolio-home.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./consumption-multilines.html">Next &#187;</a></td>
           </tr>
         </table>
