--- a/squirrel-map.html
+++ b/squirrel-map.html
@@ -1,4 +1,4 @@
-index<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -32,8 +32,7 @@ index<!DOCTYPE html>
         <table class="nav">
           <tr>
             <td><a href="./renewables-map.html">&#171; Back</a></td>
-            <td><a href="./or root URLs (like http://example.com/) you must provide an index.html file.
-index.html">Home</a></td>
+            <td><a href="./index.html">Home</a></td>
             <td><a href="./climate-emotions.html">Next &#187;</a></td>
           </tr>
         </table>
